# task_6_matrix

./: CMakeLists.txt  gtest_matrix.cpp  main.cpp  matrix.h
.github/workflows/: Release.yml
